# Isekast

./: .cursorrules  AGENT_STATE.md  MASTER_PLAN.md  audit.md  package-lock.json  package.json
.agents/: AGENTS.md
.github/workflows/: release.yml
extensions/: template-extension.js
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  probe.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/extensions/: demo_manga_scraper.js  demo_scraper.js
src-tauri/migrations/: 20240101000000_initial_schema.sql  20240101000001_progress.sql  20240101000002_anilist_sync.sql  20240101000003_extension_script.sql  20240101000004_stremio_addons.sql
src-tauri/src/: lib.rs  main.rs  probe.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs  repository.rs
src-tauri/src/downloader/: mod.rs
src-tauri/src/downloads/: mod.rs
src-tauri/src/extensions/: mod.rs
src-tauri/src/local_source/: mod.rs
src-tauri/src/metadata/: mangadex.rs  mapping.rs  mod.rs  tmdb.rs
src-tauri/src/player/: mod.rs
src-tauri/src/secure/: mod.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/torrent/: mod.rs
src/components/: CommandPalette.tsx  Layout.tsx  MangaReader.tsx  ThemeProvider.tsx  VideoPlayer.tsx
src/pages/: Details.tsx  Discover.tsx  Downloads.tsx  Extensions.tsx  Library.tsx  MangaDetails.tsx  MangaReader.tsx  MediaDetails.tsx  Player.tsx  Settings.tsx
